--- a/src/pages/CharacterDetail/CharacterDetail.module.css
+++ b/src/pages/CharacterDetail/CharacterDetail.module.css
@@ -18,7 +18,11 @@
     border-bottom: 2px solid red; 
     padding-bottom: 10px; 
 }
-
+.imageWrapper {
+    display: flex;
+    justify-content: center; 
+    margin: 20px 0; 
+}
 .characterImage {
     max-width: 100%;
     height: auto;
