--- a/src/pages/CharacterDetail/CharacterDetail.module.css
+++ b/src/pages/CharacterDetail/CharacterDetail.module.css
@@ -35,7 +35,9 @@
     transform: scale(1.02);
 }
 
-
+.comicListName{
+    font-family: var(--main-font);
+}
 .characterDescription {
     font-size: 1.2rem;
     font-family: var(--main-font);
@@ -52,12 +54,12 @@
     margin: 10px 0; 
     padding: 10px; 
     border-radius: 5px; 
-    background-color: rgba(0, 0, 0, 0.7); 
+    background-color: rgba(0, 0, 0, 0.2); 
     transition: background-color 0.3s; 
 }
 
 .comicList li:hover {
-    background-color: rgba(0, 0, 0, 0.2); 
+    background-color: rgba(0, 0, 0, 0.7); 
 }
 
 .comicList a {
