--- a/src/App.css
+++ b/src/App.css
@@ -1,15 +1,16 @@
 @import url('https://fonts.googleapis.com/css2?family=Comic+Neue:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 
+#root {
+    display: flex;
+    flex-direction: column;
+    min-height: 100%; 
+    --main-font: "Comic Neue", cursive;
+}
 html, body {
     height: 100%; 
     font-family: var(--main-font); 
     margin: 0;
     padding: 0;
-}
-#root {
-    display: flex;
-    flex-direction: column;
-    min-height: 100vh; 
 }
 
 main {
