--- a/src/components/SearchBar/SearchBar.module.css
+++ b/src/components/SearchBar/SearchBar.module.css
@@ -42,3 +42,36 @@
     outline: none;
     box-shadow: 0 0 5px 2px rgba(255, 77, 77, 0.5);
 }
+
+@media (max-width: 768px) {
+    .search_input {
+        width: 250px; 
+        font-size: 14px; 
+        margin-right: 8px; 
+    }
+
+    .search_button {
+        padding: 10px 18px; 
+        font-size: 14px;
+    }
+}
+
+@media (max-width: 480px) {
+    .search_container {
+        flex-direction: column; 
+        align-items: center;
+    }
+
+    .search_input {
+        width: 100%; 
+        font-size: 14px;
+        margin-right: 0; 
+        margin-bottom: 10px; 
+    }
+
+    .search_button {
+        width: 100%; 
+        padding: 12px; 
+        font-size: 14px; 
+    }
+}
