--- a/src/pages/CharacterDetail/CharacterDetail.module.css
+++ b/src/pages/CharacterDetail/CharacterDetail.module.css
@@ -61,7 +61,15 @@
 .comicList li:hover {
     background-color: rgba(0, 0, 0, 0.7); 
 }
-
+.loading {
+    position: absolute; 
+    text-align: center; 
+    top: 50%; 
+    left: 50%;
+    font-size: 24px;
+    font-weight: bold;
+    color: #333;
+}
 .comicList a {
     color: red; 
     text-decoration: none; 
