--- a/src/pages/Characters/Characters.module.css
+++ b/src/pages/Characters/Characters.module.css
@@ -36,6 +36,7 @@
 
 .loading {
     position: absolute; 
+    text-align: center; 
     top: 50%; 
     left: 50%;
     transform: translate(-50%, -50%); 
