--- a/src/pages/ComicDetail/ComicDetail.module.css
+++ b/src/pages/ComicDetail/ComicDetail.module.css
@@ -8,7 +8,15 @@
     box-shadow: 0 4px 20px rgba(0, 0, 0, 0.5); 
     transition: transform 0.3s, box-shadow 0.3s; 
 }
-
+.loading {
+    position: absolute; 
+    text-align: center; 
+    top: 50%; 
+    left: 50%;
+    font-size: 24px;
+    font-weight: bold;
+    color: #333;
+}
 
 .comicName {
     font-size: 2.5rem;
