--- a/src/pages/Comics/Comics.module.css
+++ b/src/pages/Comics/Comics.module.css
@@ -34,7 +34,8 @@
 }
 .loading {
     position: absolute; 
-    top: 50%; 
+    top: 50%;
+    text-align: center; 
     left: 50%;
     transform: translate(-50%, -50%); 
     font-size: 24px;
