--- a/src/components/ItemCard/ItemCard.module.css
+++ b/src/components/ItemCard/ItemCard.module.css
@@ -3,11 +3,11 @@
     border-radius: 10px; 
     box-shadow: 0 6px 20px rgba(0, 0, 0, 0.15); 
     padding: 15px; 
-    width: calc(33.333% - 20px); 
     box-sizing: border-box; 
     border: 2px solid black; 
     transition: border-color 0.3s, transform 0.3s; 
     margin-bottom: 20px; 
+    position: relative; 
 }
 
 .item:hover {
@@ -46,12 +46,14 @@
     margin: 0; 
     font-family: var(--main-font);
     max-height: 60px; 
+    min-height: 36px;
     overflow: hidden; 
     text-overflow: ellipsis; 
     display: -webkit-box; 
     -webkit-line-clamp: 2; 
     -webkit-box-orient: vertical; 
 }
+
 .heartIcon {
     font-size: 24px;
     color: #fff;
