--- a/src/pages/Comics/Comics.module.css
+++ b/src/pages/Comics/Comics.module.css
@@ -1,6 +1,5 @@
 .comics {
     padding: 20px;
-    background-color: #f5f5f5; 
 }
 
 .container {
@@ -20,13 +19,16 @@
 
 .comics_items {
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
     gap:20px;
     justify-content: center;
     margin-top: 20px;
-    position: relative;
     min-height: 400px;
     width: 100%; 
+    overflow-x: hidden;
+    padding: 20px; 
+    overflow: visible;
+    box-sizing: border-box;
 }
 .comics_items > * {
     box-sizing: border-box;
@@ -34,11 +36,11 @@
     width: 100%;
 }
 .loading {
-    position: absolute; 
+    position: relative;
+    text-align: center;
     top: 50%;
-    text-align: center; 
     left: 50%;
-    transform: translate(-50%, -50%); 
+    transform: translate(-50%, -50%);
     font-size: 24px;
     font-weight: bold;
     color: #333;
